[gd_scene load_steps=8 format=2]

[ext_resource path="res://imagem/nave2.png" type="Texture" id=1]
[ext_resource path="res://fonts/PixelOperator8-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://imagem/spaceSobre.jpg" type="Texture" id=3]
[ext_resource path="res://fases/fase1/EndScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 0.301961, 0.105882, 0.419608, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -13.0
margin_top = -21.0
margin_right = 1907.0
margin_bottom = 1059.0
rect_pivot_offset = Vector2( -1312, -336 )
texture = ExtResource( 3 )

[node name="texto" type="RichTextLabel" parent="."]
modulate = Color( 0.301961, 0.105882, 0.419608, 1 )
margin_left = 287.0
margin_top = 162.0
margin_right = 934.0
margin_bottom = 222.0
custom_fonts/normal_font = SubResource( 4 )
text = "Parabéns, você finalizou a fase 2 do M83!"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -35.0
margin_right = 123.0
margin_bottom = 43.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.301961, 0.105882, 0.419608, 1 )
margin_right = 246.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 5 )
text = "JOGAR NOVAMENTE"
flat = true

[node name="MenuInicialButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.301961, 0.105882, 0.419608, 1 )
margin_top = 26.0
margin_right = 246.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "MENU INICIAL"
flat = true

[node name="quitButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.301961, 0.105882, 0.419608, 1 )
margin_top = 52.0
margin_right = 246.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 5 )
text = "SAIR"
flat = true

[node name="Label" type="Label" parent="."]
modulate = Color( 0.301961, 0.105882, 0.419608, 1 )
margin_left = 398.0
margin_top = 218.0
margin_right = 736.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 6 )
text = "Amostras coletadas: 800"

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 545.0
margin_top = 416.0
margin_right = 635.0
margin_bottom = 513.0
texture_normal = ExtResource( 1 )

[node name="texto2" type="RichTextLabel" parent="."]
modulate = Color( 0.301961, 0.105882, 0.419608, 1 )
margin_left = 364.0
margin_top = 365.0
margin_right = 1011.0
margin_bottom = 425.0
custom_fonts/normal_font = SubResource( 4 )
text = "Clique na nave para ir a Marte"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuInicialButton" to="." method="_on_MenuInicialButton_pressed"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="." method="_on_quitButton_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
